2023-08-09  ChenPi11  <wushengwuxi-msctinoulk@outlook.com>

    Add C++ Plus package infomation.
    Update docs.
    Add GitHub CI.
    Prepare for release v1.3.0.

2023-08-08  ChenPi11  <wushengwuxi-msctinoulk@outlook.com>

    Add CMake buildsystem support.
    Add submodule 'build-aux'.
    Add NLS Language Map.

2023-08-07  ChenPi11  <wushengwuxi-msctinoulk@outlook.com>

    Update docs.
    Change project structure.
    Remove Autoconf buildsystem support.
    Add ChangeLog.
    Rename the project to 'cppp-platform'.

2023-06-01  ChenPi11  <wushengwuxi-msctinoulk@outlook.com>

    Add prepare-release.
    Update build rules.
        - Add autoconf build script.
        - Remove MS-DOS support.
        - Remove CMake build rules.
        - Fix bugs.
        - Update docs.
        - Remove Python build script.

2023-04-09  ChenPi11  <wushengwuxi-msctinoulk@outlook.com>

    Add so many things.
        - 更新了GNU Make规则
        - 完善了README.md文档,添加了多种生成方式的说明和使用手册的链接
        - 添加了使用手册文档
        - 完善了Windows下make.cmd的生成方式
        - 将lparchs中__arch_xxx__和__arch__的值改为数字,方便预处理判断
        - 优化了lparchs宏的实现逻辑,避免某些编译器出错
        - 将lpcomps中的__has_acc__改为__has_acc_compiler__,统一命名
        - 删除lpstds的__has_c89__,因为它是世界上C语言的第一个标准,标准C语言都支持
        - 添加了Python版本的生成规则
        - 添加了MS-DOS下的生成方式

2023-04-05  ChenPi11  <wushengwuxi-msctinoulk@outlook.com>

    Add CMake and cmd build.
        - 添加了CMake生成方式和cmd.exe生成方式
        - 完善了项目结构
        - 完善了Makefile
        - 删除Python生成方式:make.py
        - 修复了一些bug
        - 将所有文件结尾由CR LF改为LF，make.cmd除外
        - 完善了README.md文档，添加生成方式和用法的说明
        - 修改了输出文件名，libplatform.h改名为platform_predef.h
        - 更新.gitignore

2023-03-26  ChenPi11  <wushengwuxi-msctinoulk@outlook.com>

    1.0.1 Add Haiku OS support.

2023-02-18  ChenPi11  <wushengwuxi-msctinoulk@outlook.com>

    Update title.h

2023-02-18  ChenPi11  <wushengwuxi-msctinoulk@outlook.com>

    1.0.0

2023-02-18  ChenPi11  <wushengwuxi-msctinoulk@outlook.com>

    Initial commit.