@@ -20,19 +20,20 @@ project(cppp-platform VERSION 1.3.0)
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 11)
 
+# ----------------------------------------------------------------------------------
+# Import build-aux subdirectory.
 if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/build-aux")
     set(BUILD_AUX "${CMAKE_CURRENT_SOURCE_DIR}/build-aux")
+    add_subdirectory("${BUILD_AUX}")
+    message(STATUS "Using '${BUILD_AUX}' for C++ Plus build-aux directory.")
 elseif(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/../build-aux")
     set(BUILD_AUX "${CMAKE_CURRENT_SOURCE_DIR}/../build-aux")
 else()
     message(FATAL_ERROR "CMake build-aux directory is not exists, try to execute 'setup.cmd' or './setup.sh' to get it.")
 endif()
-set(AUX_DIR "${BUILD_AUX}/cmake")
-
-message(STATUS "Using '${BUILD_AUX}' for C++ Plus build-aux directory.")
-add_subdirectory("${BUILD_AUX}")
-
-include("${AUX_DIR}/cppp.cmake")
+get_filename_component(BUILD_AUX "${BUILD_AUX}" ABSOLUTE)
+include("${BUILD_AUX}/cmake/cppp.cmake")
+# ----------------------------------------------------------------------------------
 
 # Read source files
 file(READ "${srcdir}/src/architectures.h" ARCHITECTURES)
