@@ -1,3 +1,7 @@
+2023-08-24  ChenPi11  <wushengwuxi-msctinoulk@outlook.com>
+
+    Optimize the way to import build-aux.
+
 2023-08-09  ChenPi11  <wushengwuxi-msctinoulk@outlook.com>
 
     Add C++ Plus package infomation.
